recuperaçao dos dados do usuario em cada tela Guardar o dados enquanto navega entre telas Fazer o calculo do custo final na tela de resultado exibir o resultado e os dados inseridos  pelo usuario na mesma tela

--- a/app/src/main/res/layout/activity_consum_page.xml
+++ b/app/src/main/res/layout/activity_consum_page.xml
@@ -73,9 +73,11 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tie_consum"
-            android:hint="Ex: 5km/L"
-            android:textColorHint="@color/primary_900"
-            android:maxLength="4"
+            android:hint="Ex: 5km/L (somente números)"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
+            android:maxLength="7"
+            android:inputType="numberDecimal"
             android:background="@drawable/bgeditextcostum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
